src/objects/CRFAdditionalQuestion__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRFId__c</fullName>
        <label>CRFId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRFType__c</fullName>
        <label>CRFType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question ID</label>
        <referenceTo>QuestionAnswer__c</referenceTo>
        <relationshipLabel>CRFAdditionalQuestion</relationshipLabel>
        <relationshipName>CRFAdditionalQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>CRFAdditionalQuestion</relationshipLabel>
        <relationshipName>CRFAdditionalQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>CRFAdditionalQuestion</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRFAdditionalQuestion</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>